# plaiiin-light

./: .sdkconfig.base.esp32c3.defaults  .sdkconfig.version.defaults  CMakeLists.txt  LICENSE  NOTICE  README.md  SPECS.md  partitions.csv  sdkconfig.cube  sdkconfig.defaults  sdkconfig.display  sdkconfig.rocket  sdkconfig.strip  sdkconfig.strip-esp32c3  sdkconfig.tower  sdkconfig.tower-esp32c3  sdkconfig.tower-tower8v2  sdkconfig.wall  sdkconfig.wall-matrix16v14  sdkconfig.wall-matrix16v5  sdkconfig.wall-matrix16v6  sdkconfig.wall-matrix16v7  sdkconfig.wormhole  version.properties
.cache/clangd/index/: captive_portal.c.03AD77A6D5F02339.idx  captive_portal.h.54D05A0152AA0CE3.idx  config_store.c.9A209314036D6813.idx  config_store.h.A19A3E5FDDFD361F.idx  error_light.c.A267BFAC24DDF2D5.idx  error_light.h.10432A11C5065B04.idx  http_server.c.718AB31AB6C54074.idx  http_server.h.2E231DC7A2020EA2.idx  led_control.c.0382B40367B5312C.idx  led_control.h.DDDF6E1846A21369.idx  led_strip.h.BA378B60227E6D7E.idx  led_strip_api.c.97AECEBDD6C6EAFF.idx  led_strip_interface.h.E42AF568606379C1.idx  led_strip_rmt.h.9E7FD21921FF2C48.idx  led_strip_rmt_dev.c.7D9D3BB701B04D1D.idx  led_strip_rmt_encoder.c.A303DCF725853204.idx  led_strip_rmt_encoder.h.9DF2D10B847E881C.idx  led_strip_spi.h.8DB3A316F40C539F.idx  led_strip_spi_dev.c.CCE78B032A2179CE.idx  led_strip_types.h.84CCC56234FC1D5B.idx  light_api.c.C6B126BB71A1E576.idx  light_api.h.58A2953B80D5AEB7.idx  main.c.AE4893F6EEF1D3E3.idx  ota_update.c.3D3A8EA5C8201CA2.idx  ota_update.h.ED30B6835FE5DF44.idx  plaiiin_mqtt.c.D522178615996456.idx  plaiiin_mqtt.h.8CE9DEC1136408D7.idx  wifi.c.7DFD0A8972B978E9.idx  wifi.h.1081515FEFC7865D.idx  ws_server.c.6351AD812DBD3DB4.idx  ws_server.h.F34AE55F4D3AF09A.idx
.github/workflows/: release.yml
adaptations/: AbstractWormholePatternV1.cpp  AndroidPattern.cpp  BlazePattern.cpp  FirePattern.cpp  KnightRiderPattern.cpp  LoadingPattern.cpp  ShootingStarPattern.cpp  SinWavePattern.cpp  Win8Pattern.cpp  WormholeJumpyPatternV1.cpp  WormholeParticlePassPatternV1.cpp
adaptations/fire/: fire16x16.pattern  fire16x8.pattern  fire24x8.pattern  fire32x16.pattern  fire8x8.pattern
components/mjs/: CMakeLists.txt  mjs.c
components/plbc/: CMakeLists.txt  compile.c  plbc.h  serialize.c  vm.c
docs/: ble-share.md  protocol.md  sharing-api.md  wormhole-api.md
effects/: README.md
effects/default/: blaze.js  breath.js  fade.js  heartbeat.js  particles.js  plasma.js  sinwave.js
effects/display/: ckickenX.js  dancing-chicken.js  dvd-logo.js  fire.js  fireworks.js  horse-ride.js  japWave.js  matrix-rain.js  ring-transport.js  running-chicken.js  snake.js
effects/tower/: android.js  drops.js  knightrider.js  loading.js  spiral.js  win8.js
effects/wall/: ckickenX.js
effects/wormhole/: android.js  ap-wormhole.js  blaze.js  comet.js  count.js  depthswirl.js  fade.js  jumpy.js  knightrider.js  loading.js  particlepass.js  particles.js  sinwave.js  starfall.js  tunnelpull.js  twinarc.js  win8.js
form-template/: README.md  cube.txt  display.txt  rocket.txt  tower.txt  wall.txt  wormhole.txt
hardcoded/cube/: dynfire.c  fire.c
hardcoded/display/: dynfire.c  fire.c
hardcoded/rocket/: dynflight.c  flight.c
main/: CMakeLists.txt  Kconfig.projbuild  ai_key_api.c  ai_key_api.h  bt_service.c  bt_service.h  buttons.c  buttons.h  captive_portal.c  captive_portal.h  config_store.c  config_store.h  error_light.c  error_light.h  factory_reset.c  factory_reset.h  form_prompt.c  form_prompt.h  hardcoded_effects.h  hardcoded_runtime.c  http_server.c  http_server.h  idf_component.yml  js_api.c  js_api.h  js_params.c  js_params.h  js_player.c  js_player.h  js_storage.c  js_storage.h  keys.c  keys.h  led_control.c  led_control.h  light_api.c  light_api.h  main.c  mdns_service.c  mdns_service.h  (+14 more)
portal/: api.html  compose.html  control.html  fade.js  index.html  js.html  mqtt.html  network.html  noop.js  ota.html  plasma.js  shade-runtime.js  shootingstar.js  style.css  test.html
profiles/cube/: cube.defaults
profiles/display/: display.defaults
profiles/rocket/: rocket.defaults
profiles/strip/: strip.defaults
profiles/tower/: tower.defaults
profiles/wormhole/: wormhole.defaults
scripts/: build.sh  flash.sh  gen_hardcoded.py  onboard.sh  profile-burn.sh  profile-verify.sh  release.sh  setup.sh
